update all files
views are all set; models have less validations but that is only so pictures would go through; css necessary for template2 image; fields populate on all templates but background image does not

--- a/resume_proj/resume_app/static/css/objective.css
+++ b/resume_proj/resume_app/static/css/objective.css
@@ -9,7 +9,7 @@
     font-size: medium;
 }
 
-.phone{
+.phone, .span_skills{
     font-size: small;
 }
 
@@ -19,7 +19,7 @@
 
 /* objective and skills css */
 
-h2, .mb-3, p{
+h2, .mb-3, p, h6{
     text-align: center;
 }
 
