--- a/resume_proj/resume_app/templates/objandskill.html
+++ b/resume_proj/resume_app/templates/objandskill.html
@@ -55,49 +55,49 @@
         <textarea class="form-control" id="obj" rows="3" name="content"></textarea>
     </div>
     <br>
-    <h2>Skills</h2>
+    <h2>Skills <span class="span_skills">(9 required)</span></h2>
     <p>Hard skills are job-specific skills. For example, data analysis, project management, etc. Soft skills are
         personal or creative skills. For example, critical thinking, teamwork.</p>
     <div id="skill_list">
         <div class="row">
             <div class="col">
-                <label for="selected" class="form-label">Skill</label>
+                <label for="selected1" class="form-label">Skill</label>
                 <input type="text" class="form-control" id="skills" name="selected1">
             </div>
             <div class="col">
-                <label for="selected" class="form-label">Skill</label>
+                <label for="selected2" class="form-label">Skill</label>
                 <input type="text" class="form-control" id="skills" name="selected2">
             </div>
             <div class="col">
-                <label for="selected" class="form-label">Skill</label>
+                <label for="selected3" class="form-label">Skill</label>
                 <input type="text" class="form-control" id="skills" name="selected3">
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <label for="selected" class="form-label">Skill</label>
+                <label for="selected4" class="form-label">Skill</label>
                 <input type="text" class="form-control" id="skills" name="selected4">
             </div>
             <div class="col">
-                <label for="selected" class="form-label">Skill</label>
+                <label for="selected5" class="form-label">Skill</label>
                 <input type="text" class="form-control" id="skills" name="selected5">
             </div>
             <div class="col">
-                <label for="selected" class="form-label">Skill</label>
+                <label for="selected6" class="form-label">Skill</label>
                 <input type="text" class="form-control" id="skills" name="selected6">
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <label for="selected" class="form-label">Skill</label>
+                <label for="selected7" class="form-label">Skill</label>
                 <input type="text" class="form-control" id="skills" name="selected7">
             </div>
             <div class="col">
-                <label for="selected" class="form-label">Skill</label>
+                <label for="selected8" class="form-label">Skill</label>
                 <input type="text" class="form-control" id="skills" name="selected8">
             </div>
             <div class="col">
-                <label for="selected" class="form-label">Skill</label>
+                <label for="selected9" class="form-label">Skill</label>
                 <input type="text" class="form-control" id="skills" name="selected9">
             </div>
         </div>
