--- a/resume_proj/resume_app/static/css/template2.css
+++ b/resume_proj/resume_app/static/css/template2.css
@@ -6,7 +6,7 @@
     height: 2000px auto; */
     margin: 0px auto;
     padding: 0px;
-    /* background-color: skyblue; */
+    background-color: skyblue;
 }
 
 img{
@@ -65,6 +65,12 @@ h2{
     padding-right: 20px;
 }
 
+#nav_bar p{
+    display: flex;
+    place-content: center;
+    align-items: center;
+}
+
 /* div{
     background-color: green;
 } */
@@ -82,6 +88,8 @@ h2{
 .skills ul{
     /* padding-bottom: 0px; */
     margin: 0px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .skills1{
     display: inline-block;
@@ -96,6 +104,15 @@ h2{
 .date, .title{
     font-weight: bold;
 }
+
+table{
+    text-align: center;
+}
+
 .additional ul{
     list-style-type: square;
+}
+
+.job_title{
+    font-style: italic;
 }
