--- a/resume_proj/resume_app/templates/personalinfo.html
+++ b/resume_proj/resume_app/templates/personalinfo.html
@@ -79,17 +79,17 @@
         <div class="row">
             <div class="col">
                 <label for="street" class="form-label">Street</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" value="{{user.contact.street}}" name="street">
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="{{user.contact.street}}" name="street">
             </div>
             <div class="col">
                 <label for="city" class="form-label">City</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" value="{{user.contact.city}}" name="city">
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="{{user.contact.city}}" name="city">
             </div>
         </div>
         <div class="row">
             <div class="col">
                 <select class="form-select" aria-label="Default select example" name="state">
-                    <option selected>{{user.contact.city}}</option>
+                    <option selected>{{user.contact.state}}</option>
                     <option value="AA">Armed Forces Americas</option>
                     <option value="AP">Armed Forces Pacific</option>
                     <option value="AE">Armed Forces Others</option>
@@ -154,15 +154,15 @@
             </div>
             <div class="col">
                 <label for="zip" class="form-label">Zip</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" value="{{user.contact.zip}}" name="zip">
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="{{user.contact.zip}}" name="zip">
             </div>
         </div>
         <br>
         <h2>Contact</h2>
         <div class="row">
             <div class="col">
-                <label for="phone_number" class="form-label">Phone <span class="phone">(no dashes)</span></label>
-                <input type="tel" class="form-control" id="exampleFormControlInput1" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" value="{{user.contact.phone_number}}" name="phone_number">
+                <label for="phone_number" class="form-label">Phone <span class="phone">(with dashes)</span></label>
+                <input type="tel" class="form-control" id="exampleFormControlInput1" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="{{user.contact.phone_number}}" name="phone_number">
             </div>
             <div class="col">
                 <label for="email" class="form-label">Email</label>
@@ -174,29 +174,28 @@
         </div> -->
         <br>
         <h2>Social Media <span class="social">(LinkedIn, GitHub, etc)</span></h2>
+        <h6>Do not include www. or https. Ex: facebook.com/joe.smith</h6>
         <div class="site_row">
             <div class="col">
-                <label for="site" class="form-label">Paste site</label>
-                <input type="url" class="form-control" id="exampleFormControlInput1" name="site">
+                <label for="github" class="form-label">GitHub</label>
+                <input type="text" class="form-control" id="exampleFormControlInput1" name="github">
             </div>
             <div class="col">
-                <label for="site" class="form-label">Paste site</label>
-                <input type="url" class="form-control" id="exampleFormControlInput1" name="site">
+                <label for="linkedin" class="form-label">LinkedIn</label>
+                <input type="text" class="form-control" id="exampleFormControlInput1" name="linkedin">
             </div>
         </div>
-        <!-- <div class="row">
+        <div class="site_row">
             <div class="col">
-                <label for="site" class="form-label">Paste site</label>
-                <input type="url" class="form-control" id="exampleFormControlInput1" name="site">
+                <label for="facebook" class="form-label">Facebook</label>
+                <input type="text" class="form-control" id="exampleFormControlInput1" name="facebook">
             </div>
             <div class="col">
-                <label for="site" class="form-label">Paste site</label>
-                <input type="url" class="form-control" id="exampleFormControlInput1" name="site">
+                <label for="twitter" class="form-label">Twitter</label>
+                <input type="text" class="form-control" id="exampleFormControlInput1" name="twitter">
             </div>
-        </div> -->
         </div>
-        <input type="button" id="add_new" value="Add Site">
-        <div class="d-grid gap-2 col-2 mx-auto" id="btm_btn">
+    </div>
         <br>
         <div class="d-grid gap-2 col-2 mx-auto" id="btm_btn">
             <button class="btn btn-primary" id="submit" type="submit">Next page - Objective</button>
