--- a/resume_proj/resume_app/templates/postlogin.html
+++ b/resume_proj/resume_app/templates/postlogin.html
@@ -59,18 +59,19 @@
         </div>
         <br>
         <div id="view_button">
-            <a class="btn btn-primary" href="/templates" role="button">View Template</a>
+            <a class="btn btn-primary" href="/templatepage" role="button">View Template</a>
         </div>
         <br>
         <div id="edit_button">
             <a class="btn btn-primary" id="edit_info" href="#" role="button">Edit Info</a>
             <ul id="changes">
-                <li><a href="/editpersonalpage/{{user.id}}">Personal Info</a></li>
-                <li><a href="/editobjandskillpage/{{user.id}}">Objective & Skills</a></li>
-                <li><a href="/editexperiencepage/{{user.id}}">Experience</a></li>
-                <li><a href="/editemploymentpage/{{user.id}}">Employment</a></li>
-                <li><a href="/editeducationpage/{{user.id}}">Education</a></li>
-                <li><a href="/editadditionalpage/{{user.id}}">Additional Info & Pic</a></li>
+                <li><a href="/editpersonalpage">Personal Info</a></li>
+                <li><a href="/editobjandskillpage">Objective & Skills</a></li>
+                <li><a href="/editexperiencepage">Experience</a></li>
+                <li><a href="/editemploymentpage">Employment</a></li>
+                <li><a href="/editeducationpage">Education</a></li>
+                <li><a href="/editadditionalpage">Additional Info</a></li>
+                <li><a href="/editpicturepage">Picture</a></li>
             </ul>
         </div>
     </div>
