--- a/resume_proj/resume_app/templates/template1.html
+++ b/resume_proj/resume_app/templates/template1.html
@@ -35,8 +35,7 @@
     </script>
 </head>
 
-<body>
-    <div class="row first-info" style="background-image: url('{% {{user.picture.img.url}} %}')" >
+<body class="bgded">
     <div id="container">    
         <div class="name">
             <h1>{{user.first_name}} {{user.last_name}}</h1>
@@ -188,6 +187,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
 crossorigin="anonymous"></script>
+</td>
 </body>
 
 </html>
