--- a/resume_proj/resume_app/templates/editpersonal.html
+++ b/resume_proj/resume_app/templates/editpersonal.html
@@ -53,7 +53,7 @@
     <br>
     <br>
     <div class="container">
-        <form action="/editcontact/{{user.id}}" method="POST" id="contact">
+        <form action="/editcontact" method="POST" id="contact">
         {% csrf_token %}
         <h2>Name</h2>
         {% for message in messages %}
@@ -163,39 +163,41 @@
             </div>
             <div class="col">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" value="{{user.contact.email}}" name="email">
+                <input type="email" class="form-control" id="exampleFormControlInput1" value="{{user.email}}" name="email">
             </div>
         </div>
-        </form>
         <br>
-        <form action="/editsocial/{{user.id}}" method="POST" id="social">
-            {% csrf_token %}
         <h2>Social Media <span class="social">(LinkedIn, GitHub, etc)</span></h2>
-        <div class="row">
-            {% for social in socials %}
+        <h6>Do not include www. or https. Ex: facebook.com/joe.smith</h6>
+        <div class="site_row">
+            {% for social in user.social_medias.all %}
             <div class="col">
-                <label for="site" class="form-label">Paste site</label>
-                <input type="url" class="form-control" id="exampleFormControlInput1" value="{{user.social.site}}" name="site">
+                <label for="github" class="form-label">GitHub</label>
+                
+                <input type="text" class="form-control" id="exampleFormControlInput1" value="{{social.github}}" name="github">
+                
             </div>
+            <div class="col">
+                <label for="linkedin" class="form-label">LinkedIn</label>
+                <input type="text" class="form-control" id="exampleFormControlInput1" value="{{social.linkedin}}" name="linkedin">
+            </div>
+        </div>
+        <div class="site_row">
+            <div class="col">
+                <label for="facebook" class="form-label">Facebook</label>
+                <input type="text" class="form-control" id="exampleFormControlInput1" value="{{social.facebook}}" name="facebook">
+            </div>
+            <div class="col">
+                <label for="twitter" class="form-label">Twitter</label>
+                <input type="text" class="form-control" id="exampleFormControlInput1" value="{{social.twitter}}" name="twitter">
+            </div>
+            
             {% endfor %}
-            <!-- <div class="col">
-                <label for="site" class="form-label">Paste site</label>
-                <input type="url" class="form-control" id="exampleFormControlInput1" value="{{user.}}" name="site">
-            </div>
         </div>
-        <div class="row">
-            <div class="col">
-                <label for="site" class="form-label">Paste site</label>
-                <input type="url" class="form-control" id="exampleFormControlInput1" name="site">
-            </div>
-            <div class="col">
-                <label for="site" class="form-label">Paste site</label>
-                <input type="url" class="form-control" id="exampleFormControlInput1" name="site">
-            </div> -->
-        </div>
+    </div>
         <br>
         <div class="d-grid gap-2 col-2 mx-auto" id="btm_btn">
-            <button class="btn btn-primary" id="submit" type="button">Home Page</button>
+            <button class="btn btn-primary" id="submit" type="submit">Home</button>
         </div>
         </form>
     </div>
